// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WorkspaceLoader > saves 1`] = `
"export default (
  <page>
    <frame id=\\"\\" name=\\"\\" />
  </page>
);
"
`;

exports[`WorkspaceLoader > saves 2`] = `
"export default (
  <page>
    <text id=\\"\\" name=\\"\\" />
  </page>
);
"
`;

exports[`WorkspaceLoader > saves 3`] = `
"export default (
  <page>
    <frame id=\\"\\" name=\\"\\" />
  </page>
);
"
`;
